--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,46 +1,29 @@
 {% extends "base.html" %}
 {% block header %}
-<h1 style="margin-bottom: 1rem;">Python, open source, & the internet</h1>
-<p>by Seth Michael Larson</p>
+<h1 style="margin-bottom: 1rem;">Seth Michael Larson</h1>
+<p>Python, open source, & the internet</p>
 {% endblock %}
 {% block content %}
     <div class="row">
         <div class="col-12">
-            <p>Hey there! My name is Seth Michael Larson, my pronouns are he/him, and I'm a software engineer working remotely from Minneapolis, MN.
-            I'm on <a href="https://fosstodon.org/@sethmlarson" target="_blank" rel="noopener noreferrer">Mastodon</a> for social media and can be reached directly via <a href="mailto:sethmichaellarson@gmail.com">email</a>.
+            <p>
+                Hey there! My name is Seth, my pronouns are he/him, and I'm a software engineer in Minneapolis, Minnesota.
             </p>
             <p>
                 I maintain and contribute to
-                <a href="https://github.com/sethmlarson?tab=repositories" target="_blank" rel="noopener noreferrer">many open source projects</a> which run on <a href="https://github.com/sethmlarson?tab=achievements&achievement=mars-2020-contributor" target="_blank" rel="noopener noreferrer">at least two planets</a>.
+                <a href="https://github.com/sethmlarson?tab=repositories" target="_blank" rel="noopener noreferrer">multiple open source projects</a>.
                 Most notably I'm the lead maintainer of <a href="https://github.com/urllib3/urllib3" target="_blank" rel="noopener noreferrer">urllib3</a>, an HTTP
-                client library that is the <a href="https://pepy.tech/project/urllib3" target="_blank" rel="noopener noreferrer">
-                most downloaded package</a> on the Python Package Index with
-                over 7 billion downloads. I was made a <a href="https://pyfound.blogspot.com/2022/07/announcing-python-software-foundation.html" target="_blank" rel="noopener noreferrer">Python Software Foundation Fellow</a> in 2022.
-                I've been recognized for my work in open source with the <a href="https://github.blog/2022-06-24-thank-you-to-our-maintainers" target="_blank" rel="noopener noreferrer">GitHub Maintainer Month</a> sponsorship in 2022 and <a href="https://www.linkedin.com/posts/sethmlarson_ive-been-awarded-the-google-open-source-activity-6613836181647958017-3kb8" target="_blank" rel="noopener noreferrer">
-                Google Open Source Peer Bonus</a> in 2019.
+                client library that is the most downloaded package on the Python Package Index with
+                <a href="https://pepy.tech/project/urllib3?versions=*" target="_blank" rel="noopener noreferrer">over 9 billion downloads</a>. I was made a <a href="https://pyfound.blogspot.com/2022/07/announcing-python-software-foundation.html" target="_blank" rel="noopener noreferrer">Python Software Foundation Fellow</a> in 2022.
             </p>
             <p>
-                Other open source projects I contribute to include
-                <a href="https://github.com/psf/requests" target="_blank" rel="noopener noreferrer">requests</a>,
-                <a href="https://github.com/sethmlarson/truststore" target="_blank" rel="noopener noreferrer">truststore</a>,
-                <a href="https://github.com/python-hyper/rfc3986" target="_blank" rel="noopener noreferrer">rfc3986</a>,
-                <a href="https://github.com/python-hyper/brotlicffi" target="_blank" rel="noopener noreferrer">brotlicffi</a>,
-                <a href="https://github.com/sethmlarson/hstspreload" target="_blank" rel="noopener noreferrer">hstspreload</a>,
-                <a href="https://github.com/sethmlarson/capture-packets" target="_blank" rel="noopener noreferrer">capture-packets</a>,
-                <a href="https://github.com/sethmlarson/psl" target="_blank" rel="noopener noreferrer">psl</a>,
-                <a href="https://utf8.xyz" target="_blank" rel="noopener noreferrer">utf8.xyz</a>,
-                <a href="https://github.com/python-trio/sniffio" target="_blank" rel="noopener noreferrer">sniffio</a>, and
-                <a href="https://github.com/python-trio/unasync" target="_blank" rel="noopener noreferrer">unasync</a>.
-            </p>
-            <p>
-                I write about intermediate and advanced Python, open source, security, and internet tech.
+                I enjoy writing about Python, open source maintenance and sustainability, security, and technology powering the internet.
                 If you're also interested in these topics you may find <a href="{{ url_for('list_blog_posts') }}">articles on my blog</a> worth a read.
+                There's typically one article per month on average, so if you'd like to be notified when I publish something new
+                you can subscribe to <a href="https://tinyletter.com/sethmlarson">the email newsletter</a> or follow along your favorite RSS client. Promise not to fill your inbox!
             </p>
             <p>
-                I'm a principal software engineer at <a href="https://elastic.co" target="_blank" rel="noopener noreferrer">Elastic</a>
-                working as a tech lead for the Language Clients team. Previously at Elastic I was the maintainer of the
-                <a href="https://github.com/elastic/elasticsearch-py" target="_blank" rel="noopener noreferrer">
-                Python API clients</a> for services like Elasticsearch, Enterprise Search, and more. In 2020 I was awarded the Elastic Outstanding Contributor award.
+                My email address is <code>sethmichaellarson@gmail.com</code>. My handle is typically <code>@sethmlarson</code> like on <a href="https://github.com/sethmlarson" target="_blank" rel="noopener noreferrer">GitHub</a>, <a href="https://twitter.com/sethmlarson" target="_blank" rel="noopener noreferrer">Twitter</a>, and <a href="https://fosstodon.org/@sethmlarson" target="_blank" rel="noopener noreferrer">Mastodon</a>.
             </p>
         </div>
     </div>
