--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -48,5 +48,6 @@
 <div class="container">
 {% block content %}{% endblock %}
 </div>
+<script data-goatcounter="https://sethmlarson-dev.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 </body>
 </html>
