Few tweaks on blog format

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -35,8 +35,7 @@
     <div class="row">
       <a href="/">About</a> |
       <a href="{{ url_for('list_blog_posts') }}">Blog</a> |
-      <a href="https://tinyletter.com/sethmlarson">Newsletter</a> |
-      <a href="{{ url_for('rss_blog_posts') }}">RSS</a>
+      <a href="https://tinyletter.com/sethmlarson">Newsletter</a>
     </div>
     <div class="row">
       {% block header %}
