--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -23,7 +23,7 @@
                 you can subscribe to <a href="https://tinyletter.com/sethmlarson">the email newsletter</a> or follow along your favorite RSS client. Promise not to fill your inbox!
             </p>
             <p>
-                My email address is <code>sethmichaellarson@gmail.com</code>. My handle is typically <code>@sethmlarson</code> like on <a href="https://github.com/sethmlarson" target="_blank" rel="noopener noreferrer">GitHub</a>, <a href="https://twitter.com/sethmlarson" target="_blank" rel="noopener noreferrer">Twitter</a>, and <a href="https://fosstodon.org/@sethmlarson" target="_blank" rel="noopener noreferrer">Mastodon</a>.
+                My email address is <code>sethmichaellarson@gmail.com</code>. Around the internet my handle is typically <code>@sethmlarson</code>, for example on <a href="https://github.com/sethmlarson" target="_blank" rel="noopener noreferrer">GitHub</a>, <a href="https://fosstodon.org/@sethmlarson" target="_blank" rel="noopener noreferrer">Mastodon</a>, and <a href="https://twitter.com/sethmlarson" target="_blank" rel="noopener noreferrer">Twitter</a>.
             </p>
         </div>
     </div>
