--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,6 +8,9 @@
         <div class="col-12">
             <p>
                 Hey there! My name is Seth, my pronouns are he/him, and I'm a software engineer in Minneapolis, Minnesota.
+                I am the Security Developer-in-Residence at the Python Software Foundation
+                and working on improving the security posture of projects like CPython, PyPI, and the broader Python ecosystem.
+                Get in contact via email <code>seth@python.org</code>.
             </p>
             <p>
                 I maintain and contribute to
@@ -23,7 +26,7 @@
                 you can subscribe to <a href="https://tinyletter.com/sethmlarson">the email newsletter</a> or follow along your favorite RSS client. Promise not to fill your inbox!
             </p>
             <p>
-                My email address is <code>sethmichaellarson@gmail.com</code>. Around the internet my handle is typically <code>@sethmlarson</code>, for example on <a href="https://github.com/sethmlarson" target="_blank" rel="noopener noreferrer">GitHub</a>, <a href="https://fosstodon.org/@sethmlarson" target="_blank" rel="noopener noreferrer">Mastodon</a>, and <a href="https://twitter.com/sethmlarson" target="_blank" rel="noopener noreferrer">Twitter</a>.
+                My personal/open source email address is <code>sethmichaellarson@gmail.com</code>. Around the internet my handle is typically <code>@sethmlarson</code>, for example on <a href="https://github.com/sethmlarson" target="_blank" rel="noopener noreferrer">GitHub</a>, <a href="https://fosstodon.org/@sethmlarson" target="_blank" rel="noopener noreferrer">Mastodon</a>, and <a href="https://twitter.com/sethmlarson" target="_blank" rel="noopener noreferrer">Twitter</a>.
             </p>
         </div>
     </div>
