Add PSF email address

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,6 +12,9 @@
                 and working on improving the security posture of projects like CPython, PyPI, and the broader Python ecosystem.
             </p>
             <p>
+                If you'd like to contact me for something related to the Security Developer-in-Residence role you can email me at <code>seth@python.org</code>.
+            </p>
+            <p>
                 I maintain and contribute to
                 <a href="https://github.com/sethmlarson?tab=repositories" target="_blank" rel="noopener noreferrer">multiple open source projects</a>.
                 Most notably I'm the lead maintainer of <a href="https://github.com/urllib3/urllib3" target="_blank" rel="noopener noreferrer">urllib3</a>, an HTTP
