Update style and footer

--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -22,6 +22,16 @@ Reading time: {{ reading_time }} minute{{ 's' if reading_time != 1 else '' }}</p
 {% block content %}
 {{ blog_content | safe }}
 <blockquote>
-    <p style="text-align: center;">Subscribe to be notified of more content like this through the <a href="https://tinyletter.com/sethmlarson">email newsletter</a> or RSS.</p>
+    <p><strong>Wow, you made it to the end!</strong></p>
+    <p>
+        If you're like me, you don't believe social media should be <em>the way</em> to get updates on the cool stuff your friends are up to.
+        Instead, you should either follow my blog on RSS or my <a href="https://tinyletter.com/sethmlarson">email newsletter</a> for guaranteed article publication notifications.
+    </p>
+    <p>
+        If you really enjoyed a piece I would be grateful if you shared with a friend. If you have follow-up thoughts you can send them via email.
+    </p>
+    <p>
+        <strong>Thanks for reading!</strong><br> — Seth
+    </p>
 </blockquote>
 {% endblock %}
