--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,12 +7,8 @@
     <div class="row">
         <div class="col-12">
             <p>
-                Hey there! My name is Seth, my pronouns are he/him, and I'm a software engineer in Minneapolis, Minnesota.
-                I am the Security Developer-in-Residence at the Python Software Foundation
+                Hey there! My name is Seth, and I am the <a href="https://pyfound.blogspot.com/2023/06/announcing-our-new-security-developer.html" target="_blank" rel="noopener noreferrer">Security Developer-in-Residence at the Python Software Foundation</a>
                 and working on improving the security posture of projects like CPython, PyPI, and the broader Python ecosystem.
-            </p>
-            <p>
-                If you'd like to contact me for something related to the Security Developer-in-Residence role you can email me at <code>seth@python.org</code>.
             </p>
             <p>
                 I maintain and contribute to
@@ -24,11 +20,20 @@
             <p>
                 I enjoy writing about Python, open source maintenance and sustainability, security, and technology powering the internet.
                 If you're also interested in these topics you may find <a href="{{ url_for('list_blog_posts') }}">articles on my blog</a> worth a read.
-                There's typically one article per month on average, so if you'd like to be notified when I publish something new
-                you can subscribe to <a href="https://tinyletter.com/sethmlarson">the email newsletter</a> or follow along your favorite RSS client. Promise not to fill your inbox!
             </p>
             <p>
-                My personal/open source email address is <code>sethmichaellarson@gmail.com</code>. Around the internet my handle is typically <code>@sethmlarson</code>, for example on <a href="https://github.com/sethmlarson" target="_blank" rel="noopener noreferrer">GitHub</a>, <a href="https://fosstodon.org/@sethmlarson" target="_blank" rel="noopener noreferrer">Mastodon</a>, and <a href="https://twitter.com/sethmlarson" target="_blank" rel="noopener noreferrer">Twitter</a>.
+                Below is a non-exhaustive list of information about me:
+                <table>
+                    <tr><th>Key</th><th>Value</th></tr>
+                    <tr><td>Pronouns</td><td>he/him</td></tr>
+                    <tr><td>Email (Personal)</td><td><a href="mailto:sethmichaellarson@gmail.com" target="_blank" rel="noopener noreferrer"><code>sethmichaellarson@gmail.com</code></a></td></tr>
+                    <tr><td>Email (Work)</td><td><a href="mailto:sethmichaellarson@gmail.com" target="_blank" rel="noopener noreferrer"><code>seth@python.org</code></a></td></tr>
+                    <tr><td>GitHub</td><td><a href="https://github.com/sethmlarson" target="_blank" rel="noopener noreferrer"><code>@sethmlarson</code></a></td></tr>
+                    <tr><td>Mastodon</td><td><a href="https://fosstodon.org/@sethmlarson" target="_blank" rel="noopener noreferrer"><code>@sethmlarson@fosstodon.org</code></a></td></tr>
+                    <tr><td>Discord</td><td><a href="https://discord.com/users/481989102951202817" target="_blank" rel="noopener noreferrer"><code>@sethmlarson</code></a></td></tr>
+                    <tr><td>Twitter</td><td><a href="https://twitter.com/sethmlarson" target="_blank" rel="noopener noreferrer"><code>@sethmlarson</code></a></td></tr>
+                    <tr><td>Bluesky</td><td><a href="https://bsky.app/profile/sethmlarson.dev" target="_blank" rel="noopener noreferrer"><code>@sethmlarson.dev</code></a></td></tr>
+                </table>
             </p>
         </div>
     </div>
