--- a/app/static/style.css
+++ b/app/static/style.css
@@ -97,7 +97,12 @@ h2, h3 {
 h4, h5, h6 {
   font-size: 1.1rem;
 }
-h2, h3 {
+h2 {
+  font-weight: bold;
+  border-bottom: double;
+  border-width: 3px;
+}
+h3 {
   border-bottom: solid;
   border-width: 1px;
 }
