rewording footer a bit

--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -25,7 +25,7 @@ Reading time: {{ reading_time }} minute{{ 's' if reading_time != 1 else '' }}</p
     <p><strong>Wow, you made it to the end!</strong></p>
     <p>
         If you're like me, you don't believe social media should be <em>the way</em> to get updates on the cool stuff your friends are up to.
-        Instead, you should either follow my blog on RSS or my <a href="https://tinyletter.com/sethmlarson">email newsletter</a> for guaranteed article publication notifications.
+        Instead, you should either follow my blog with the RSS reader of your choice or via my <a href="https://tinyletter.com/sethmlarson">email newsletter</a> for guaranteed article publication notifications.
     </p>
     <p>
         If you really enjoyed a piece I would be grateful if you shared with a friend. If you have follow-up thoughts you can send them via email.
