Add 'archive' fragment

--- a/app/templates/blog-posts.html
+++ b/app/templates/blog-posts.html
@@ -25,7 +25,7 @@
         <p><strong><a href="/utf-8">How does UTF-8 turn “😂” into “F09F9882”?</a></strong><br>
             Deep-dive into how the UTF-8 encoding works bit-by-bit with hand-crafted flow chart diagrams along with some historical perspective.
         </p>
-        <h2>Archive</h2>
+        <h2 id="archive">Archive<a class="anchor" href="#archive" aria-hidden="true">§</a></h2>
         <ul>
         {% for month in blog_posts %}
         {% for bp in blog_posts[month] %}
