Add links to cool stuff

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -35,7 +35,8 @@
     <div class="row">
       <a href="/">About</a> |
       <a href="{{ url_for('list_blog_posts') }}">Blog</a> |
-      <a href="https://tinyletter.com/sethmlarson">Newsletter</a>
+      <a href="https://tinyletter.com/sethmlarson">Newsletter</a> |
+      <a href="{{ url_for('links') }}">Links</a>
     </div>
     <div class="row">
       {% block header %}
