--- a/app/templates/links.html
+++ b/app/templates/links.html
@@ -8,31 +8,46 @@ This is a list of links to stuff on the internet that I enjoyed and want to shar
 I use <a href="https://omnivore.app">Omnivore</a> to read, tag, and share URLs. I recommend giving them a try and <a href="https://opencollective.com/omnivore">supporting their team via Open Collective</a>.
 </p>
 <p>
+<h2>Life</h2><ul>
+<li>"<a href="https://nedbatchelder.com/blog/202310/reflected_energy.html">Reflected energy</a>" by <strong>Ned Batchelder</strong></li>
+<li>"<a href="https://nedbatchelder.com/blog/202310/where_did_everyone_go.html">Where did everyone go?</a>" by <strong>Ned Batchelder</strong></li>
+<li>"<a href="https://newsletter.thejorgemedina.com/p/youre-not-lacking-creativity-youre">You’re not lacking creativity, you’re overwhelmed</a>" by <strong>Jorge Medina</strong></li>
+<li>"<a href="https://brettscott.substack.com/p/tech-doesnt-make-our-lives-easier">Tech doesn’t make our lives easier. It makes them faster</a>" by <strong>Brett Scott</strong></li>
+</ul>
 <h2>Retro Gaming</h2><ul>
+<li>"<a href="https://garyodernichts.blogspot.com/2023/10/exploiting-dns-response-parsing-on-wii-u.html?m=1">Exploiting DNS response parsing on the Wii U</a>" by <strong>Gary</strong></li>
+<li>"<a href="https://gameboycamera.super.site/projects/game-boy-mini-camera">Game Boy Mini Camera</a>" by <strong>Christopher Graves</strong></li>
 <li>"<a href="https://stacksmashing.gumroad.com/l/gb-link">USB to GB Link Cable Adapter Kit</a>" by <strong>Stacksmashing</strong></li>
 <li>"<a href="https://github.com/zenaro147/PicoAdapterGB">Connect Game Boy Advance to Raspberry Pi Pico W</a>" by <strong>zenaro147</strong></li>
 <li>"<a href="https://youtube.com/watch?si=qnFN8X6I2wZ8WW0e&v=tsfuIRWK-BY">Internet-enabled GameCube Memory Card</a>" by <strong>Macho Nacho</strong></li>
+<li>"<a href="https://www.laserbear.net/blogs/news/gamecube-lcd-jewel-roadmap">GameCube LCD Jewel</a>" by <strong>Gregory Collins</strong></li>
+<li>"<a href="https://gameboycamera.com">Game Boy Camera Photographer and Developer</a>" by <strong>Christopher Graves</strong></li>
+<li>"<a href="https://katelibc.medium.com/adventures-with-an-11-000-kilometre-long-game-boy-advance-link-fa52082a31c9">11,000km Game Boy Advance link cable</a>" by <strong>Cariad Keigher</strong></li>
+<li>"<a href="https://www.insidegadgets.com/2018/12/09/making-the-gameboy-link-cable-wireless-packet-based">Making the Gameboy Link Cable Wireless (Packet-based)</a>" by <strong>Alex</strong></li>
+<li>"<a href="https://palmr.co.uk/posts/26-gameboy-link-cable-breakout">Game Boy Link Cable Breakout Board</a>" by <strong>Nick Palmer</strong></li>
 <li>"<a href="https://youtube.com/watch?si=HUTEvS41iLInTyDI&v=qwL4ZSa0xMo">PicoBoot Modchip for GameCube Installation Guide and Overview</a>" by <strong>Macho Nacho</strong></li>
 <li>"<a href="https://youtube.com/watch?si=9heDSjHkSvFVx9UY&v=1uxu8anymDg">GameCube M2 Loader</a>" by <strong>Macho Nacho</strong></li>
 <li>"<a href="https://github.com/loociano/awesome-ereader-dev">E-Reader Development Resources</a>" by <strong>loociano</strong></li>
 <li>"<a href="http://ereader.kiczek.com">E-Reader Info and Downloads</a>" by <strong>Kiczek</strong></li>
-<li>"<a href="https://katelibc.medium.com/adventures-with-an-11-000-kilometre-long-game-boy-advance-link-fa52082a31c9">11,000km Game Boy Advance link cable</a>" by <strong>Cariad Keigher</strong></li>
-<li>"<a href="https://www.insidegadgets.com/2018/12/09/making-the-gameboy-link-cable-wireless-packet-based">Making the Gameboy Link Cable Wireless (Packet-based)</a>" by <strong>Alex</strong></li>
-<li>"<a href="https://palmr.co.uk/posts/26-gameboy-link-cable-breakout">Game Boy Link Cable Breakout Board</a>" by <strong>Nick Palmer</strong></li>
 <li>"<a href="https://caitsith2.com">Technical info on NES, SNES, GBA, DS, 3DS</a>" by <strong>caitsith2</strong></li>
 <li>"<a href="https://www.coranac.com/tonc/text/toc.htm">TONC: Framework for GameBoy Advance game programming</a>" by <strong>Cearn</strong></li>
 <li>"<a href="https://www.youtube.com/watch?v=EkcISHZvWHE">Ashida Portable GameCube Assembly</a>" by <strong>GingerOfVODs</strong></li>
 </ul>
 <h2>Security</h2><ul>
+<li>"<a href="https://dgl.cx/2023/09/ansi-terminal-security">" [31m"?! ANSI Terminal security in 2023 and finding 10 CVEs</a>"</li>
+<li>"<a href="https://blog.yossarian.net/2023/10/18/Some-concerns-with-OpenPubKey">Some concerns with OpenPubKey</a>" by <strong>William Woodruff</strong></li>
 <li>"<a href="https://words.filippo.io/dispatches/seeds-bounty">Announcing the $8,192 NIST Elliptic Curves Seeds Bounty</a>" by <strong>Filippo Valsorda</strong></li>
 <li>"<a href="https://alexgaynor.net/2023/oct/02/defining-the-memory-safety-problem">Defining the memory safe problem</a>" by <strong>Alex Gaynor</strong></li>
 <li>"<a href="https://blog.trailofbits.com/2023/05/23/trusted-publishing-a-new-benchmark-for-packaging-security">Trusted publishing: a new benchmark for packaging security</a>" by <strong>William Woodruff</strong></li>
 </ul>
 <h2>Software / OSS</h2><ul>
+<li>"<a href="https://ntietz.com/blog/write-more-useless-software">Write more "useless" software</a>" by <strong>Nicole</strong></li>
+<li>"<a href="https://lwn.net/Articles/947138">Progress on no-GIL CPython</a>" by <strong>Jake Edge</strong></li>
 <li>"<a href="https://research.swtch.com/qr/draw">QR Code Artwork Generator</a>" by <strong>Russ Cox</strong></li>
 <li>"<a href="https://tofu.quest">Is It Tofu? Check Unicode compatibility</a>" by <strong>Aaron Madlon-Kay</strong></li>
 <li>"<a href="https://tonsky.me/blog/unicode">The Absolute Minimum Every Software Developer Must Know About Unicode in 2023</a>" by <strong>Nikita Prokopov</strong></li>
 <li>"<a href="https://stripe.com/blog/payment-api-design">Stripe Payment API Design</a>" by <strong>Michelle Bu</strong></li>
+<li>"<a href="https://alexgaynor.net/2020/nov/30/why-software-ends-up-complex">Why software ends up complex</a>" by <strong>Alex Gaynor</strong></li>
 </ul>
 <h2>Toy / Art</h2><ul>
 <li>"<a href="https://abagames.github.io/joys-of-small-game-development-en">Joys of Small Game Development</a>" by <strong>abagames</strong></li>
