Remove Bluesky in favor of LinkedIn

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -31,8 +31,8 @@
                     <tr><td>GitHub</td><td><a href="https://github.com/sethmlarson" target="_blank" rel="noopener noreferrer"><code>@sethmlarson</code></a></td></tr>
                     <tr><td>Mastodon</td><td><a href="https://fosstodon.org/@sethmlarson" target="_blank" rel="me noopener noreferrer"><code>@sethmlarson@fosstodon.org</code></a></td></tr>
                     <tr><td>Discord</td><td><a href="https://discord.com/users/481989102951202817" target="_blank" rel="noopener noreferrer"><code>@sethmlarson</code></a></td></tr>
+                    <tr><td>LinkedIn</td><td><a href="https://www.linkedin.com/in/sethmlarson/" target="_blank" rel="noopener noreferrer"><code>sethmlarson</code></a></td></tr>
                     <tr><td>Twitter</td><td><a href="https://twitter.com/sethmlarson" target="_blank" rel="noopener noreferrer"><code>@sethmlarson</code></a></td></tr>
-                    <tr><td>Bluesky</td><td><a href="https://bsky.app/profile/sethmlarson.dev" target="_blank" rel="noopener noreferrer"><code>@sethmlarson.dev</code></a></td></tr>
                 </table>
             </p>
         </div>
