--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -24,7 +24,7 @@ Reading time: {{ reading_time }} minute{{ 's' if reading_time != 1 else '' }}</p
 <blockquote>
     <p><strong>Wow, you made it to the end!</strong></p>
     <p>
-        If you're like me, you don't believe social media should be <em>the way</em> to get updates on the cool stuff your friends are up to.
+        <strong>Social media companies shouldn't be the only way</strong> to get updates on the cool stuff your friends are up to.
         Instead, you should either follow my blog via the <a href="{{ url_for('rss_blog_posts') }}">RSS feed</a> or the <a href="https://tinyletter.com/sethmlarson">email newsletter</a> for guaranteed article publication notifications.
     </p>
     <p>
@@ -36,7 +36,7 @@ Reading time: {{ reading_time }} minute{{ 's' if reading_time != 1 else '' }}</p
 </blockquote>
 <div>
     <center>
-         <p xmlns:cc="http://creativecommons.org/ns#" >This work is licensed under <a href="https://creativecommons.org/licenses/by-sa/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC BY-SA 4.0</a> <a href="https://creativecommons.org/licenses/by-sa/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/sa.svg?ref=chooser-v1"></a></p>
+         <p xmlns:cc="http://creativecommons.org/ns#" >This work is licensed under <nobr><a href="https://creativecommons.org/licenses/by-sa/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC BY-SA 4.0</a> <a href="https://creativecommons.org/licenses/by-sa/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/sa.svg?ref=chooser-v1"></a></nobr></p>
     </center>
 </div>
 {% endblock %}
