--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -28,8 +28,8 @@
                     <tr><td>Pronouns</td><td>he/him</td></tr>
                     <tr><td>Email (Personal)</td><td><a href="mailto:sethmichaellarson@gmail.com" target="_blank" rel="noopener noreferrer"><code>sethmichaellarson@gmail.com</code></a></td></tr>
                     <tr><td>Email (Work)</td><td><a href="mailto:sethmichaellarson@gmail.com" target="_blank" rel="noopener noreferrer"><code>seth@python.org</code></a></td></tr>
-                    <tr><td>GitHub</td><td><a href="https://github.com/sethmlarson" target="_blank" rel="noopener noreferrer"><code>@sethmlarson</code></a></td></tr>
                     <tr><td>Mastodon</td><td><a href="https://fosstodon.org/@sethmlarson" target="_blank" rel="me noopener noreferrer"><code>@sethmlarson@fosstodon.org</code></a></td></tr>
+                    <tr><td>GitHub</td><td><a href="https://github.com/sethmlarson" target="_blank" rel="me noopener noreferrer"><code>@sethmlarson</code></a></td></tr>
                     <tr><td>Discord</td><td><a href="https://discord.com/users/481989102951202817" target="_blank" rel="noopener noreferrer"><code>@sethmlarson</code></a></td></tr>
                     <tr><td>LinkedIn</td><td><a href="https://www.linkedin.com/in/sethmlarson/" target="_blank" rel="noopener noreferrer"><code>sethmlarson</code></a></td></tr>
                     <tr><td>Twitter</td><td><a href="https://twitter.com/sethmlarson" target="_blank" rel="noopener noreferrer"><code>@sethmlarson</code></a></td></tr>
