--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,6 +15,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500&family=Fira+Sans:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="webmention" href="https://webmention.io/sethmlarson.dev/webmention" />
 {% block opengraph %}
     <meta property="og:site_name" content="Seth Michael Larson"/>
     <meta property="og:author" content="Seth Michael Larson"/>
