--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1,5 +1,10 @@
-html, body {
-  font-family: 'Fira Sans', sans-serif;
+:root {
+  font-family: Inter, sans-serif;
+  font-feature-settings: 'liga' 1, 'calt' 1, 'ss02' 1, 'ss03' 1; /* fix for Chrome */
+  font-size: 100%;
+}
+@supports (font-variation-settings: normal) {
+  :root { font-family: InterVariable, sans-serif; }
 }
 body {
   background-color: #fff;
@@ -7,8 +12,7 @@ body {
   margin: 0;
   padding: 0;
   font-weight: 400;
-  font-size: 18px;
-  font-feature-settings: "liga" 0, "tnum", "zero", "ss01", "locl";
+  font-size: 1.2rem;
   line-height: 1.54;
   -webkit-overflow-scrolling: touch;
   -webkit-text-size-adjust: 100%;
@@ -19,7 +23,7 @@ body {
   padding-bottom: 4em;
 
   @media (min-width:600px) {
-    font-size: 1.2rem;
+    font-size: 1.3rem;
   }
 }
 
@@ -68,7 +72,6 @@ thead {
 h1, h2, h3, h4, h5, h6 {
   letter-spacing: 0em;
   line-height: 1.3;
-  font-weight: 400;
 }
 h2:not(:first-child) {
  margin-top: 40px;
@@ -87,20 +90,21 @@ h6:not(:first-child) {
 }
 h1 {
   font-size: 2rem;
+  font-weight: bold;
   margin: 0;
   margin-top: 2rem;
   margin-bottom: 2rem;
 }
 h2, h3 {
-  font-size: 1.2rem;
+  font-size: 1.5rem;
+  font-weight: bold;
 }
 h4, h5, h6 {
-  font-size: 1.1rem;
+  font-size: 1.4rem;
 }
 h2 {
-  font-weight: bold;
-  border-bottom: double;
-  border-width: 3px;
+  border-bottom: solid;
+  border-width: 2px;
 }
 h3 {
   border-bottom: solid;
