--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>{% block title %}Seth Michael Larson — Python, open source, and the internet{% endblock %}</title>
+    <title>{% block title %}Seth Michael Larson{% endblock %}</title>
     <meta name="description" content="Python, open source, and the internet">
     <meta name="keywords" content="python pypi open source maintainer urllib3 requests http networking security oss">
     <meta name="author" content="Seth Michael Larson">
@@ -12,9 +12,8 @@
     <link rel="alternate" type="application/atom+xml" title="Atom Feed" href="{{ url_for('rss_blog_posts') }}"/>
     <link rel="icon" href="/static/favicon.ico">
     <link rel="stylesheet" href="/static/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500&family=Fira+Sans:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://rsms.me/">
+    <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
     <link rel="webmention" href="https://webmention.io/sethmlarson.dev/webmention" />
 {% block opengraph %}
     <meta property="og:site_name" content="Seth Michael Larson"/>
@@ -34,9 +33,9 @@
 <div class="header">
   <div class="container">
     <div class="row">
-      <a href="/">About</a> |
-      <a href="{{ url_for('list_blog_posts') }}">Blog</a> |
-      <a href="https://tinyletter.com/sethmlarson">Newsletter</a> |
+      <a href="/">About</a> •
+      <a href="{{ url_for('list_blog_posts') }}">Blog</a> •
+      <a href="https://tinyletter.com/sethmlarson">Newsletter</a> •
       <a href="{{ url_for('links') }}">Links</a>
     </div>
     <div class="row">
