--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -16,7 +16,7 @@
 {% endblock %}
 {% block header %}
 <h1>{{ blog_title }}</h1>
-<p>Published {{ blog_published_date }} by <strong>Seth Larson</strong><br>
+<p><nobr>Published {{ blog_published_date }}</nobr> <nobr>by Seth Larson</nobr><br>
 Reading time: {{ reading_time }} minute{{ 's' if reading_time != 1 else '' }}</p>
 {% endblock %}
 {% block content %}
