--- a/app/templates/blog-posts.html
+++ b/app/templates/blog-posts.html
@@ -7,15 +7,14 @@
     <div class="col-12">
         <h2 id="highlighted">Highlighted articles<a class="anchor" href="#highlighted" aria-hidden="true">§</a></h2>
         <p>If you're a first time reader, welcome! 👋 Below are the articles that I'm most proud of so if you're looking for a place to start then look no further:</p>
-        <p><strong><a href="/security-for-package-maintainers">Security for package maintainers</a></strong><br>
-            Package maintainers have extremely privileged accounts with any unauthorized access having the potential to affect millions of users. What are some secure account configurations and best practices that can keep this nightmare scenario from happening to you?
-        </p>
         <p><strong><a href="/utf-8">How does UTF-8 turn “😂” into “F09F9882”?</a></strong><br>
             Deep-dive into how the UTF-8 encoding works bit-by-bit with hand-crafted flow chart diagrams along with some historical perspective.
         </p>
-        <p><strong><a href="/python-and-slsa">Python and SLSA 💃</a></strong><br>
-            Supply chain Layers for Software Artifacts (SLSA) is a framework of tools to generate and verify provenance for software artifacts.
-            How can these tools be put to use in existing Python packages to attest to provenance of wheels and source distributions on PyPI?
+        <p><strong><a href="/pep-440">Quirks of Python package versioning</a></strong><br>
+            PEP 440 describes how Python package versions are structured and behave. Let's explore the stranger side of Python package versions.
+        </p>
+        <p><strong><a href="/security-for-package-maintainers">Security for package maintainers</a></strong><br>
+            Package maintainers have extremely privileged accounts with any unauthorized access having the potential to affect millions of users. What are some secure account configurations and best practices that can keep this nightmare scenario from happening to you?
         </p>
         <h2 id="archive">Archive<a class="anchor" href="#archive" aria-hidden="true">§</a></h2>
         <ul>
