--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1,6 +1,37 @@
+@font-face {
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  font-feature-settings: 'ss03' 1;
+  src: url("https://rsms.me/inter/font-files/Inter-Regular.woff2?v=4.0") format("woff2");
+}
+@font-face {
+  font-family: Inter;
+  font-style: italic;
+  font-weight: 400;
+  font-display: swap;
+  font-feature-settings: 'ss03' 1;
+  src: url("https://rsms.me/inter/font-files/Inter-Italic.woff2?v=4.0") format("woff2");
+}
+@font-face {
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  font-feature-settings: 'ss03' 1;
+  src: url("https://rsms.me/inter/font-files/Inter-Bold.woff2?v=4.0") format("woff2"); }
+@font-face {
+  font-family: Inter;
+  font-style: italic;
+  font-weight: 700;
+  font-display: swap;
+  font-feature-settings: 'ss03' 1;
+  src: url("https://rsms.me/inter/font-files/Inter-BoldItalic.woff2?v=4.0") format("woff2");
+}
+
 :root {
   font-family: Inter, sans-serif;
-  font-feature-settings: 'liga' 1, 'calt' 1, 'ss02' 1, 'ss03' 1; /* fix for Chrome */
   font-size: 100%;
 }
 body {
