--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -24,11 +24,17 @@ Reading time: {{ reading_time }} minute{{ 's' if reading_time != 1 else '' }} <a
 <blockquote>
     <p><strong>Don't let social media algorithms decide what you want to see.</strong></p>
     <p>
-        <strong>Never miss an article and support the decentralized web.</strong> Get guaranteed notifications for new publications by following the <a href="{{ url_for('rss_blog_posts') }}">RSS feed</a> or the <a href="https://tinyletter.com/sethmlarson">email newsletter</a>.
-        Send any thoughts and questions you have via <a href="https://fosstodon.org/@sethmlarson">Mastodon</a> or <a href="mailto:sethmichaellarson@gmail.com">email</a>.
-    </p>
-    <p>
-        <strong>Thanks for reading!</strong><br> — Seth
+        Get notified of new publications by subscribing to the <a href="{{ url_for('rss_blog_posts') }}">RSS feed</a> or the <a href="https://tinyletter.com/sethmlarson">email newsletter</a>:
+
+    <form
+      action="https://buttondown.email/api/emails/embed-subscribe/sethmlarson"
+      method="post"
+      target="popupwindow"
+      onsubmit="window.open('https://buttondown.email/sethmlarson', 'popupwindow')"
+    >
+      <input type="email" name="email" id="bd-email" placeholder="you@example.com" required/>
+      <input type="submit" value="Subscribe"/>
+    </form>
     </p>
 </blockquote>
 <div>
