--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -34,7 +34,7 @@
     <div class="row">
       <a href="/">About</a> •
       <a href="{{ url_for('list_blog_posts') }}">Blog</a> •
-      <a href="https://tinyletter.com/sethmlarson">Newsletter</a> •
+      <a href="https://buttondown.email/sethmlarson">Newsletter</a> •
       <a href="{{ url_for('links') }}">Links</a>
     </div>
     <div class="row">
