--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -24,7 +24,7 @@ Reading time: {{ reading_time }} minute{{ 's' if reading_time != 1 else '' }} <a
 <blockquote>
     <p><strong>Don't let social media algorithms decide what you want to see.</strong></p>
     <p>
-        Get notified of new publications by subscribing to the <a href="{{ url_for('rss_blog_posts') }}">RSS feed</a> or the <a href="https://tinyletter.com/sethmlarson">email newsletter</a>:
+        Get notified of new publications by subscribing to the <a href="{{ url_for('rss_blog_posts') }}">RSS feed</a> or the <a href="https://buttondown.email/sethmlarson">email newsletter</a>:
 
     <form
       action="https://buttondown.email/api/emails/embed-subscribe/sethmlarson"
